# py_gitcd

./: .gitignore  README.md  gitcd_wrapper.nu  gitcd_wrapper.sh  pyproject.toml  test.py
gitcd/: main.py  utils.py
